@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: thread.test,v 1.4 2000/05/04 20:16:23 kupries Exp $
+# RCS: @(#) $Id: thread.test,v 1.5 2000/05/09 19:14:15 kupries Exp $
 
 package require tcltest
 namespace import -force ::tcltest::*
@@ -44,6 +44,9 @@ proc ThreadReap {} {
     thread::errorproc ThreadError
     return [llength [thread::names]]
 }
+
+::tcltest::makeFile dummyForTransfer dummyForTransfer
+set dummy  [file join $::tcltest::temporaryDirectory dummyForTransfer]
 
 test thread-1.1 {no thread command} {
     info commands thread
@@ -276,7 +279,7 @@ test thread-5.2 {Try to join a detached thread} {
 
 test thread-6.0 {Transfer of channels, channel lists} {
     set server [thread::create]
-    set file   [open aclocal.m4 r]
+    set file   [open $dummy r]
 
     set res [regexp $file [file channels]]
 
@@ -291,7 +294,7 @@ test thread-6.0 {Transfer of channels, channel lists} {
 
 test thread-6.1 {Transfer of channels, target dying} {
     set server [thread::create]
-    set file   [open aclocal.m4 r]
+    set file   [open $dummy r]
 
     thread::send -async $server {after 3000 ; thread::exit}
     catch {thread::transfer $server $file} msg
@@ -313,7 +316,7 @@ test thread-6.2 {Transfer of channels, clearing of fileevents} {
     }
 
     set server [thread::create]
-    set file   [open aclocal.m4 r]
+    set file   [open $dummy r]
     set gotEvents 0
 
     fileevent $file readable _HandleIt_
@@ -325,7 +328,7 @@ test thread-6.2 {Transfer of channels, clearing of fileevents} {
 
 test thread-6.3 {Transfer of channels, readable?} {
     set server [thread::create]
-    set file   [open aclocal.m4 r]
+    set file   [open $dummy r]
     set res [regexp $file [file channels]]
 
     thread::transfer $server $file
@@ -337,7 +340,7 @@ test thread-6.3 {Transfer of channels, readable?} {
 
 test thread-6.4 {Transfer of channels, closeable?} {
     set server [thread::create]
-    set file   [open aclocal.m4 r]
+    set file   [open $dummy r]
     set res [regexp $file [file channels]]
 
     thread::transfer $server $file
