@@ -1,3 +1,9 @@
+2000-05-09 Andreas Kupries  <a.kupries@westend.com>
+
+	* tests/thread.test: Removed dependency on aclocals.m4. Using a
+	  real temporary file now, as created by a call to
+	  tcltest::makeFile.
+
 2000-05-04  Andreas Kupries <a.kupries@westend.com>
 
 	* Overall changes:
